[project]
name = "pp-image-downloader"
version = "0.1.0"
description = "A CLI tool to download images from Palette Plaza's photo transfer service."
authors = [
    {name = "misono",email = "ginpeimisonou@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
packages = [{include = "pp_image_downloader", from = "src"}]
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "piexif (>=1.1.3,<2.0.0)"
]

[project.scripts]
pp-image-downloader = "pp_image_downloader.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

